feat(build): update jackson version (#2665)
Do not rely on restlet version anymore.